@@ -1,3 +1,8 @@
+2004-03-09  Benjamin Otte  <otte@gnome.org>
+
+	* gst-libs/gst/mixer/mixer.c: (gst_mixer_class_init):
+	  the signals take 2 arguments
+
 2004-03-09  David Schleef  <ds@schleef.org>
 
 	* ext/alsa/gstalsa.c: (gst_alsa_request_new_pad),
